# platform.core.appfw.data-provider-master

./: CMakeLists.txt  com.samsung.data-provider-master.desktop  com.samsung.data-provider-master.manifest  data-provider-master.conf.in  data-provider-master.desktop  data-provider-master.manifest  data-provider-master.rule  data-provider-master.service.in  org.tizen.data-provider-master.service.in  project.config
data/: CMakeLists.txt  abi.ini  baltic.conf.ini  conf.ini  data-provider-master  data-provider-master-badge.socket  data-provider-master-client.socket  data-provider-master-fd.socket  data-provider-master-notification.socket  data-provider-master-provider.socket  data-provider-master-service.socket  data-provider-master-shortcut.socket  data-provider-master-utility.socket  data-provider-master.path  data-provider-master.service  data-provider-master.target  dump_dynamicbox.sh  dump_livebox.sh  dump_widget.sh  mobile.data-provider-master.service  private.conf.ini  resolution.ini  wayland.mobile.conf.ini  wayland.wearable.conf.ini  x11.mobile.320x480.conf.ini  x11.mobile.320x480.resolution.ini  x11.mobile.480x800.conf.ini  x11.mobile.480x800.resolution.ini  x11.mobile.800x480.conf.ini  x11.mobile.conf.ini  x11.wearable.360x360.conf.ini  x11.wearable.360x480.conf.ini  x11.wearable.360x480.resolution.ini  x11.wearable.conf.ini  x11.wearable.resolution.ini
data/device/: abi.ini  wayland.mobile.320x480.conf.ini  wayland.mobile.conf.ini  wayland.wearable.conf.ini  x11.mobile.320x480.conf.ini  x11.mobile.480x800.conf.ini  x11.mobile.540x960.conf.ini  x11.mobile.conf.ini  x11.wearable.360x360.conf.ini  x11.wearable.360x480.conf.ini  x11.wearable.conf.ini
data/emulator/: wayland.mobile.conf.ini  wayland.wearable.conf.ini  x11.mobile.320x480.conf.ini  x11.mobile.480x800.conf.ini  x11.mobile.540x960.conf.ini  x11.mobile.conf.ini  x11.wearable.360x360.conf.ini  x11.wearable.360x480.conf.ini  x11.wearable.conf.ini
debian/: changelog  com.samsung.data-provider-master.install.in  com.samsung.data-provider-master.postinst  control  rules
deprecated/: client_manager.c  client_manager.h  pkg_manager.c  pkg_manager.h  slave_manager.c
include/: abi.h  badge_service.h  buffer_handler.h  client_life.h  client_manager.h  client_rpc.h  conf.h  critical_log.h  ctx_client.h  ctx_wrapper.h  dbus.h  dead_monitor.h  debug.h  event.h  fault_manager.h  fb.h  file_service.h  group.h  instance.h  io.h  lite-errno.h  liveinfo.h  monitor.h  notification_service.h  package.h  parser.h  pkg_manager.h  pkgmgr.h  rpc_to_slave.h  script_handler.h  server.h  service_common.h  setting.h  shared_fd_service.h  shortcut_service.h  slave_life.h  slave_manager.h  slave_rpc.h  util.h  utility_service.h  (+3 more)
packaging/: com.samsung.data-provider-master.spec  data-provider-master.changes  data-provider-master.manifest  data-provider-master.service  data-provider-master.spec
pkgmgr/: CMakeLists.txt
pkgmgr/src/: service_register.c
pkgmgr_dynamicbox/: CMakeLists.txt  dynamicbox.xml  dynamicbox.xsd
pkgmgr_dynamicbox/src/: service_register.c
pkgmgr_livebox/: CMakeLists.txt  livebox.xml
pkgmgr_livebox/src/: service_register.c
pkgmgr_widget/: CMakeLists.txt  widget.xml  widget.xsd
pkgmgr_widget/common/: CMakeLists.txt
pkgmgr_widget/common/include/: common.h
pkgmgr_widget/common/src/: common.c
pkgmgr_widget/src/: service_register.c  service_widget.c  widget_pkgmgr.c
pkgmgr_widget/watch/: CMakeLists.txt  watchapp.xml  watchapp.xsd
pkgmgr_widget/watch/src/: service_watchapp.c
pkgmgr_widget/watchapp/: CMakeLists.txt
pkgmgr_widget/watchapp/src/: service_watchapp.c
pkgmgr_widget/widget/: CMakeLists.txt
pkgmgr_widget/widget-application/: CMakeLists.txt
pkgmgr_widget/widget-application/src/: service_widget.c
pkgmgr_widget/widget/src/: service_widget.c
res/edje/: CMakeLists.txt  master.edc
src/: abi.c  badge_service.c  buffer_handler.c  buffer_handler_wayland.c  client_life.c  client_manager.c  client_rpc.c  conf.c  critical_log.c  ctx_client.c  ctx_wrapper.c  dbus.c  dead_monitor.c  event.c  fault_manager.c  fb.c  file_service.c  group.c  instance.c  io.c  liveinfo.c  main.c  monitor.c  notification_service.c  package.c  packet.c  parser.c  pkg_manager.c  pkgmgr.c  rpc_to_slave.c  script_handler.c  secom_socket.c  server.c  service_common.c  setting.c  shared_fd_service.c  shortcut_service.c  slave_life.c  slave_manager.c  slave_rpc.c  (+8 more)
util_liveinfo/: CMakeLists.txt
util_liveinfo/include/: node.h
util_liveinfo/src/: liveinfo.c  node.c
widget-mgr/: CMakeLists.txt
widget-mgr/src/: node.c  widget-mgr.c
