CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(common C)

ADD_DEFINITIONS("-DPREFIX=\"${PREFIX}\"")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
ADD_LIBRARY(${PROJECT_NAME} STATIC
	src/common.c
	src/dlist.c
)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${bin_pkgs_LDFLAGS} "-fPIC")

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION "etc/package-manager/parserlib")

# End of a file
